# nu_lab

./: .gitattributes  .gitignore  test.py
attention/: check.py
attention/nanogpt_modified_ffn/: gpt.txt  model.py  pyproject.toml  shake.txt  train.py
attention/nanogpt_modified_ffn/config/: train_gpt2.py  train_gpt2_shakespeare.py
attention/nanogpt_modified_ffn/data/shakespeare/: prepare.py
attention/nanogpt_modified_ffn/wandb/: latest-run
attention/nanogpt_modified_ffn/wandb/run-20251212_183448-6cpwpn69/: run-6cpwpn69.wandb
attention/nanogpt_modified_ffn/wandb/run-20251212_183448-6cpwpn69/files/: config.yaml  requirements.txt  wandb-metadata.json
attention/nanogpt_modified_ffn/wandb/run-20251212_184239-sqp1coir/: run-sqp1coir.wandb
attention/nanogpt_modified_ffn/wandb/run-20251212_184239-sqp1coir/files/: wandb-metadata.json
attention/nanogpt_modified_ffn/wandb/run-20251215_134947-by07tvc1/: run-by07tvc1.wandb
attention/nanogpt_modified_ffn/wandb/run-20251215_134947-by07tvc1/files/: config.yaml  wandb-metadata.json  wandb-summary.json
attention/nanogpt_modified_ffn/wandb/run-20251215_135138-z1djj3j9/files/: wandb-metadata.json
attention/nanogpt_modified_ffn/wandb/run-20251217_122755-1ga6gkbi/files/: wandb-metadata.json
attention/nanogpt_modified_ffn/wandb/run-20251217_122855-wzlzgufs/: run-wzlzgufs.wandb
attention/nanogpt_modified_ffn/wandb/run-20251217_122855-wzlzgufs/files/: wandb-metadata.json
checkpoints/: ddpm_epoch1.pt  ddpm_epoch10.pt  ddpm_epoch100.pt  ddpm_epoch2.pt  ddpm_epoch20.pt  ddpm_epoch3.pt  ddpm_epoch30.pt  ddpm_epoch4.pt  (+12 more)
(+66 files in other folders)
